--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,6 +1,6 @@
-* {
-  background-image: url("../images/pexels-karolina-grabowska-4199145.jpg");
-  padding: 0 5px;
-  margin: 0;
-  box-sizing: border-box;
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 20px;
 }
