--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -2,11 +2,40 @@
 
 :root {
   --main-color: #f5b93f;
-  --secondary-color: #d47617;
+  --secondary-color: #d475177a;
   --third-color: #d3feea;
-  --main-font: "Noto Serif Display", serif;
-  --title-font: "Darker Grotesque", serif;
+  --main-font: "Darker Grotesque", serif;
+  --title-font: "Noto Serif Display", serif;
   --color: black;
   --title-text-size: 24px;
   --main-text-size: 16px;
+}
+
+body {
+  background-image: url("../images/background-spoon.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+h1,
+h2 {
+  font-weight: lighter;
+  font-family: var(--title-font);
+  text-align: center;
+  font-weight: 400;
+}
+
+h1 {
+  font-size: 2em;
+}
+
+h2 {
+  font-size: 1.5em;
+}
+
+p {
+  font-family: var(--main-font);
 }
