--- a/client/src/styles/question.css
+++ b/client/src/styles/question.css
@@ -3,37 +3,28 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  background-color: rgba(212, 117, 23, 0.233);
+  background-color: var(--secondary-color);
   border-radius: 20px;
 }
-.title {
-  width: 50vw;
-  text-align: center;
-  font-family: "Noto Serif Display", serif;
-  font-weight: 200;
-  font-size: 1.5rem;
-}
 
-h2 {
-  font-weight: lighter;
-}
 .anwser {
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-family: "Darker Grotesque", sans-serif;
+  font-family: var(--title-font);
   font-weight: 400;
   font-size: 1.5rem;
 }
 
 .awnser1 {
-  margin-top: -15px;
+  margin-top: 15px;
 }
+
 .awnser2 {
-  margin-top: -14px;
+  margin-top: 14px;
 }
 
 .awnser3 {
   transform: translateX(6px);
-  margin-top: -12px;
+  margin-top: 12px;
 }
