--- a/client/src/styles/About.css
+++ b/client/src/styles/About.css
@@ -1,11 +1,20 @@
 @import "./index.css";
 
-.whoAreWe,
-.history {
+.inside {
   background-color: var(--secondary-color);
   border-radius: 20px;
   text-align: center;
-  margin-top: 10vh;
+  margin: 2vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.whoAreWe,
+.history {
+  background-color: #ffffffcf;
+  border-radius: 20px;
+  text-align: center;
+  margin-top: 5vh;
 }
 
 .creators {
@@ -16,15 +25,15 @@
 }
 
 .creators img {
-  width: 30vw;
+  width: 10vw;
   height: auto;
   border-radius: 50%;
   margin: 15px 5px;
 }
 
-.history {
+/* .history {
   padding: 5vh 0;
-}
+} */
 
 .history p {
   padding: 2vh 10vh;
@@ -35,6 +44,6 @@
     flex-wrap: nowrap;
   }
   .creators img {
-    width: 20vw;
+    width: 15vw;
   }
 }
