--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -3,7 +3,7 @@
 :root {
   --main-color: #f5b93f;
   --secondary-color: #d475177a;
-  --third-color: #d3feea;
+  --third-color: #ffffffcf;
   --main-font: "Darker Grotesque", serif;
   --title-font: "Noto Serif Display", serif;
   --color: black;
