--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -21,7 +21,7 @@ body {
 }
 
 h1,
-h2 {
+h2, h3 {
   font-weight: lighter;
   font-family: var(--title-font);
   text-align: center;
@@ -34,6 +34,10 @@ h1 {
 
 h2 {
   font-size: 1.5em;
+}
+
+h2 {
+  font-size: 1em;
 }
 
 p {
