--- a/client/src/styles/About.css
+++ b/client/src/styles/About.css
@@ -1,20 +1,20 @@
 @import "./index.css";
 
+.whoAreWe,
+.history {
+  background-color: var(--third-color);
+  border-radius: 20px;
+  text-align: center;
+  margin-top: 3em;
+  padding: 1em;
+}
+
 .inside {
   background-color: var(--secondary-color);
   border-radius: 20px;
   text-align: center;
-  margin: 2vh;
   display: flex;
   flex-direction: column;
-}
-
-.whoAreWe,
-.history {
-  background-color: #ffffffcf;
-  border-radius: 20px;
-  text-align: center;
-  margin-top: 5vh;
 }
 
 .creators {
@@ -25,18 +25,14 @@
 }
 
 .creators img {
-  width: 10vw;
+  width: 6em;
   height: auto;
   border-radius: 50%;
   margin: 15px 5px;
 }
 
-/* .history {
-  padding: 5vh 0;
-} */
-
 .history p {
-  padding: 2vh 10vh;
+  padding: 0.5em 2em;
 }
 
 @media screen and (min-width: 600px) {
@@ -44,6 +40,6 @@
     flex-wrap: nowrap;
   }
   .creators img {
-    width: 15vw;
+    width: 8em;
   }
 }
