--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -2,7 +2,7 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 5vh;
+  padding: 5em;
 }
 
 @media screen and (min-width: 600px) {
@@ -10,6 +10,5 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 5vh 20vw;
   }
 }
