--- a/client/src/styles/Result2.css
+++ b/client/src/styles/Result2.css
@@ -1,52 +1,36 @@
 .cards-container {
-  background-color: #ffffffcf;
+  background-color: var(--third-color);
   border-radius: 20px;
-  gap: 16px;
+  margin-bottom: 10px;
   display: flex;
   justify-content: center;
-  margin: 10px;
-
-  /* display: flex;
-flex-direction: column;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
-    gap: 16px; */
 }
-/* le plus gros contenueur --> fond blanc  */
+
 .card {
   background-color: var(--secondary-color);
   border-radius: 20px;
   text-align: center;
-  margin: 2vh;
+  margin: 1em;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
-  box-sizing: border-box;
   width: 100%;
+  padding-left: 18px;
+  gap: 5em;
+}
 
-  padding: 18px;
-  margin: 10px;
-  /* background-color: var(--secondary-color);
-box-sizing: border-box;
-width: 200px;
-height: 300px;
-overflow: hidden;
-border: 5px solid rgba(255, 255, 255, 0.943);
-border-radius: 15px; */
-}
-/* fond orange à l'intérieur de card-conteneur */
-.card-image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 10px;
-}
 .sectionimage {
   width: 100%;
   height: 150px;
 }
+
+.card-image {
+  width: 80%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
 .sectiontexte {
-  padding: 10px;
+  padding-right: 10px;
 }
