--- a/client/src/styles/nav.css
+++ b/client/src/styles/nav.css
@@ -1,4 +1,4 @@
-.navigation {
+nav {
   display: flex;
   justify-content: space-between;
   background-color: var(--main-color);
@@ -6,7 +6,7 @@
   padding: 5vh;
 }
 
-.navigation img {
+nav img {
   width: 20vw;
   border-radius: 100px;
 }
@@ -17,7 +17,7 @@ a {
 }
 
 @media screen and (min-width: 600px) {
-  .navigation {
+  nav {
     padding: 5vh;
   }
 }
