--- a/client/src/styles/question.css
+++ b/client/src/styles/question.css
@@ -5,7 +5,7 @@
 }
 
 .inside-question {
-  background-color: var(--secondary-color);
+  background-color: var(--third-color);
   border-radius: 20px;
   text-align: center;
   margin: 1em;
