home component with style, all the css remains to be unified

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -2,7 +2,8 @@
 
 :root {
   --main-color: #f5b93f;
-  --secondary-color: #d475177a;
+  --nav-color: #f5b93f;
+  --secondary-color: #ffa64c87;
   --third-color: #ffffffcf;
   --main-font: "Darker Grotesque", serif;
   --title-font: "Noto Serif Display", serif;
