--- a/client/src/styles/nav.css
+++ b/client/src/styles/nav.css
@@ -1,7 +1,7 @@
 nav {
   display: flex;
   justify-content: space-between;
-  background-color: var(--main-color);
+  background-color: var(--nav-color);
   align-items: center;
   padding: 5vh;
 }
