--- a/client/src/styles/question.css
+++ b/client/src/styles/question.css
@@ -5,15 +5,16 @@
 }
 
 .inside-question {
-  background-color: var(--third-color);
+  background-color: var(--secondary-color);
   border-radius: 20px;
   text-align: center;
   margin: 1em;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
-  gap: 5em;
+  justify-content: space-evenly;
+  width: 40em;
+  height: 10em;
 }
 
 .anwser {
