--- a/client/src/styles/nav.css
+++ b/client/src/styles/nav.css
@@ -1,23 +1,29 @@
+@import url(../styles/index.css);
+
 nav {
+  background-color: var(--nav-color);
+}
+
+.navbar {
   display: flex;
   justify-content: space-between;
-  background-color: var(--nav-color);
   align-items: center;
-  padding: 5vh;
+  padding: 2em;
 }
 
 nav img {
-  width: 20vw;
-  border-radius: 100px;
+  width: 20vh;
+  border-radius: 50%;
+}
+
+.navbar p {
+  font-family: var(--main-font);
+  font-weight: 500;
+  font-size: 1.5em;
+  color: white;
 }
 
 a {
   text-decoration: none;
-  font-family: var(--main-font);
-}
-
-@media screen and (min-width: 600px) {
-  nav {
-    padding: 5vh;
-  }
+  color: white;
 }
