--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -2,7 +2,8 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 5em;
+  align-items: center;
+  padding: 1rem;
 }
 
 @media screen and (min-width: 600px) {
