--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -23,22 +23,21 @@ body {
 h1,
 h2,
 h3 {
-  font-weight: lighter;
+  font-weight: 350;
   font-family: var(--title-font);
   text-align: center;
-  font-weight: 400;
 }
 
 h1 {
-  font-size: 2em;
+  font-size: 2rem;
 }
 
 h2 {
-  font-size: 1.5em;
+  font-size: 1.5rem;
 }
 
-h2 {
-  font-size: 1em;
+h3 {
+  font-size: 1rem;
 }
 
 p {
