--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -4,6 +4,7 @@ main {
   justify-content: center;
   align-items: center;
   padding: 1rem;
+  min-height: 78vh;
 }
 
 @media screen and (min-width: 600px) {
