--- a/client/src/styles/Result2.css
+++ b/client/src/styles/Result2.css
@@ -12,8 +12,9 @@
   text-align: center;
   margin: 1em;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
   width: 100%;
   padding-left: 18px;
   gap: 5em;
