--- a/client/src/styles/nav.css
+++ b/client/src/styles/nav.css
@@ -1,5 +1,3 @@
-@import url(../styles/index.css);
-
 nav {
   background-color: var(--nav-color);
 }
@@ -28,9 +26,9 @@ nav img {
   color: black;
 }
 
-/* @media screen and (min-width: 600px) {
+@media screen and (min-width: 600px) {
   nav {
     padding: 3vh;
     color: white;
-  } */
-/* } */
+  }
+}
