--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -7,10 +7,15 @@ main {
   min-height: 78vh;
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 768px) {
   main {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    min-height: 82vh;
+  }
+  nav {
+    padding: 0 8vh;
+    color: white;
   }
 }
