--- a/client/src/styles/question.css
+++ b/client/src/styles/question.css
@@ -13,8 +13,8 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
-  width: 40em;
-  height: 10em;
+  width: 40rem;
+  height: 10rem;
 }
 
 .anwser {
