--- a/client/src/styles/About.css
+++ b/client/src/styles/About.css
@@ -22,24 +22,55 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
+  gap: 1.5rem;
 }
 
 .creators img {
   width: 6em;
-  height: auto;
+  height: 6em;
   border-radius: 50%;
   margin: 15px 5px;
+  object-fit: cover;
 }
 
 .history p {
   padding: 0 2em;
+  line-height: 1.6;
 }
 
 @media screen and (min-width: 768px) {
+  .whoAreWe,
+  .history {
+    padding: 2em;
+  }
+
   .creators {
     flex-wrap: nowrap;
+    justify-content: space-around;
   }
+
   .creators img {
     width: 8em;
+    height: 8em;
+  }
+
+  .history p {
+    padding: 0 5em;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .inside {
+    padding: 3em;
+  }
+
+  .creators img {
+    width: 10em;
+    height: 10em;
+  }
+
+  .history p {
+    padding: 0 10em;
+    font-size: 1.2em;
   }
 }
