--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -4,7 +4,8 @@ main {
   justify-content: center;
   align-items: center;
   padding: 1rem;
-  min-height: 78vh;
+  min-height: 100vh;
+  margin-top: 4em;
 }
 
 @media screen and (min-width: 768px) {
@@ -12,7 +13,9 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    min-height: 82vh;
+    align-items: center;
+    margin-left: 20em;
+    min-height: 90vh;
   }
   nav {
     padding: 0 8vh;
