--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -4,7 +4,7 @@
   --main-color: #f5b93f;
   --nav-color: #f5b93f;
   --secondary-color: #ffa64c87;
-  --third-color: #ffffffcf;
+  --third-color: #ffffffd0;
   --main-font: "Darker Grotesque", serif;
   --title-font: "Noto Serif Display", serif;
   --color: black;
@@ -16,6 +16,7 @@ body {
   background-image: url("../images/background-spoon.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+  min-height: 100vh;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
