--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -3,22 +3,30 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 1rem;
   min-height: 100vh;
-  margin-top: 4em;
+  width: 100%;
+  margin-left: 1em;
+  margin-top: 5em;
+  box-sizing: border-box;
 }
 
 @media screen and (min-width: 768px) {
   main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-left: 20em;
-    min-height: 90vh;
+    width: 100vw;
+    height: auto;
   }
   nav {
     padding: 0 8vh;
     color: white;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 1080px) {
+  main {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-left: 14em;
+    max-width: calc(100% - 20em);
   }
 }
