--- a/client/src/styles/Result.css
+++ b/client/src/styles/Result.css
@@ -13,9 +13,9 @@
 .result-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  width: 30em;
   justify-content: center;
   align-items: center;
-  width: 100%;
   opacity: 0;
   transform: translateY(20px);
   animation: fadeIn 2s ease forwards;
@@ -135,6 +135,7 @@
 
 @media (min-width: 769px) and (max-width: 1080px) {
   .result-container {
-    padding-left: 20em;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
   }
 }
