--- a/client/src/styles/nav.css
+++ b/client/src/styles/nav.css
@@ -53,7 +53,7 @@ nav img {
   nav {
     flex-direction: column;
     width: 15%;
-    height: 100%;
+    height: 100vh;
     justify-content: flex-start;
     align-items: center;
     padding: 2rem 0;
