--- a/client/src/styles/About.css
+++ b/client/src/styles/About.css
@@ -44,11 +44,10 @@
   .whoAreWe,
   .history {
     padding: 2em;
-    margin-left: 22em;
+    max-width: 50%;
   }
 
   .creators {
-    flex-wrap: nowrap;
     justify-content: space-around;
   }
 
@@ -73,7 +72,6 @@
   }
 
   .history p {
-    padding: 0 10em;
     font-size: 1.2em;
   }
 }
