--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,32 +1,28 @@
+/* Version pour mobile  */
 main {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  width: 100%;
-  margin-left: 1em;
+  width: 100vw;
   margin-top: 5em;
   box-sizing: border-box;
-}
-
-@media screen and (min-width: 768px) {
-  main {
-    width: 100vw;
-    height: auto;
-  }
-  nav {
-    padding: 0 8vh;
-    color: white;
-  }
 }
 
 @media (min-width: 769px) and (max-width: 1080px) {
   main {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     margin-left: 14em;
-    max-width: calc(100% - 20em);
+    box-sizing: border-box;
+  }
+}
+
+@media screen and (min-width: 1081px) {
+  main {
+    margin-left: 20em;
+    box-sizing: border-box;
   }
 }
