--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -16,6 +16,7 @@ body {
   background-image: url("../images/background-spoon.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+  background-color: rgb(#222, #222, #222);
   padding: 0;
   margin: 0;
 }
