--- a/client/src/styles/nav.css
+++ b/client/src/styles/nav.css
@@ -1,20 +1,5 @@
 @import url(../styles/index.css);
 
-nav {
-  background-color: var(--nav-color);
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 4rem;
-  z-index: 1000;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: all 0.65s ease;
-}
-
 .navbar {
   display: flex;
   align-items: center;
@@ -25,7 +10,7 @@ nav {
   padding: 0 1rem;
 }
 
-nav img {
+.logo {
   width: 10rem;
   border-radius: 50%;
 }
@@ -50,15 +35,6 @@ nav img {
 
 /* Styles pour les écrans de plus de 768px */
 @media (min-width: 768px) {
-  nav {
-    flex-direction: column;
-    width: 15%;
-    height: 100%;
-    justify-content: flex-start;
-    align-items: center;
-    padding: 2rem 0;
-  }
-
   .navbar {
     flex-direction: column;
     gap: 3rem;
@@ -66,7 +42,7 @@ nav img {
     justify-content: flex-start;
   }
 
-  nav img {
+  .logo {
     width: 8rem;
   }
 
@@ -89,7 +65,7 @@ nav img {
     padding: 0 1rem;
   }
 
-  nav img {
+  .logo {
     width: 6rem;
   }
 
