--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -8,6 +8,21 @@ main {
   margin-top: 4em;
 }
 
+nav {
+  background-color: var(--nav-color);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 4rem;
+  z-index: 1000;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.65s ease;
+}
+
 @media screen and (min-width: 768px) {
   main {
     display: flex;
@@ -17,8 +32,22 @@ main {
     margin-left: 20em;
     min-height: 90vh;
   }
+
   nav {
-    padding: 0 8vh;
+    flex-direction: column;
+    width: 15%;
+    height: 100%;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 2rem 0;
     color: white;
+  }
+}
+
+@media (max-width: 480px) {
+  nav {
+    height: auto;
+    flex-direction: row;
+    width: 100%;
   }
 }
