fin des fixations de styles

--- a/client/src/styles/About.css
+++ b/client/src/styles/About.css
@@ -1,5 +1,3 @@
-@import "./index.css";
-
 .whoAreWe,
 .history {
   background-color: var(--third-color);
@@ -39,7 +37,7 @@
   line-height: 1.6;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 769px) and (max-width: 1080px) {
   .whoAreWe,
   .history {
     padding: 2em;
@@ -60,16 +58,16 @@
   }
 }
 
-@media screen and (min-width: 1024px) {
-  .inside {
-    padding: 3em;
+@media screen and (min-width: 1081px) {
+  .whoAreWe,
+  .history {
+    padding: 1%;
+    max-width: 50%;
   }
-
   .creators img {
     width: 10em;
     height: 10em;
   }
-
   .history p {
     font-size: 1.2em;
   }
