--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -19,23 +19,30 @@ nav {
   z-index: 1000;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   transition: all 0.65s ease;
 }
 
 footer {
-  background-color: var(--main-color);
+  background-color: var(--nav-color);
   display: flex;
   justify-content: center;
   align-items: center;
   height: auto; /* Laisser auto pour s'adapter au contenu */
   width: 100%;
-  padding: 1rem;
   text-align: center;
 }
 
+footer p {
+  font-weight: 500;
+}
+
 @media screen and (max-width: 480px) {
+  main {
+    min-height: 85vh;
+  }
   nav {
     height: auto;
     flex-direction: row;
@@ -49,15 +56,14 @@ footer {
     justify-content: center;
     align-items: center;
     margin-left: 20em;
-    min-height: 90vh;
+    min-height: 120vh;
   }
 
   nav {
     flex-direction: column;
-    width: 15%;
+    width: 10%;
     height: 100%;
     justify-content: flex-start;
-    align-items: center;
     padding: 2rem 0;
   }
 
@@ -69,14 +75,14 @@ footer {
 @media screen and (min-width: 1081px) {
   main {
     margin-left: 20em;
+    min-height: 90vh;
   }
 
   nav {
     flex-direction: column;
-    width: 15%;
+    width: 10%;
     height: 100%;
     justify-content: flex-start;
-    align-items: center;
     padding: 2rem 0;
   }
 
