--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -15,9 +15,13 @@ body {
   background-image: url("../images/background-spoon.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  background-color: rgb(#222, #222, #222);
   padding: 0;
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  max-width: 80vw;
 }
 
 * {
@@ -26,7 +30,8 @@ body {
 
 h1,
 h2,
-h3 {
+h3,
+h4 {
   font-weight: 350;
   font-family: var(--title-font);
   text-align: center;
@@ -41,14 +46,20 @@ h2 {
 }
 
 h3 {
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 
 p {
   font-family: var(--main-font);
+  font-size: 1rem;
 }
 
 a {
   text-decoration: none;
+  font-family: var(--main-font);
+}
+
+li {
+  list-style-type: none;
   font-family: var(--main-font);
 }
