--- a/client/src/styles/nav.css
+++ b/client/src/styles/nav.css
@@ -1,79 +1,51 @@
-@import url(../styles/index.css);
-
 .navbar {
-  display: flex;
-  align-items: center;
+  flex-direction: row;
+  gap: 1rem;
   justify-content: space-between;
-  gap: 2rem;
-  width: 100%;
-  max-width: 1200px;
   padding: 0 1rem;
 }
 
 .logo {
-  width: 10rem;
-  border-radius: 50%;
+  width: 6rem;
 }
 
 .navbar p {
-  font-family: var(--main-font);
-  font-weight: 500;
-  font-size: 1.5rem;
-  color: black;
-  margin: 0;
+  font-size: 1rem;
 }
 
 .about-link {
-  text-decoration: none;
-  color: black;
-  font-weight: 500;
+  font-size: 0.9rem;
 }
 
-.about-link:hover {
-  color: var(--highlight-color);
-}
-
-/* Styles pour les écrans de plus de 768px */
-@media (min-width: 768px) {
+@media screen and (min-width: 769px) {
   .navbar {
+    display: flex;
     flex-direction: column;
-    gap: 3rem;
     align-items: center;
-    justify-content: flex-start;
-  }
-
-  .logo {
-    width: 8rem;
-  }
-
-  .navbar p {
-    font-size: 1.3rem;
-  }
-}
-
-@media (max-width: 480px) {
-  nav {
-    height: auto;
-    flex-direction: row;
+    gap: 2rem;
     width: 100%;
-  }
-
-  .navbar {
-    flex-direction: row;
-    gap: 1rem;
-    justify-content: space-between;
+    max-width: 1200px;
     padding: 0 1rem;
   }
 
   .logo {
-    width: 6rem;
+    width: 8rem;
+    border-radius: 50%;
   }
 
   .navbar p {
-    font-size: 1rem;
+    font-weight: 500;
+    color: black;
+    margin: 0;
   }
 
   .about-link {
-    font-size: 0.9rem;
+    text-decoration: none;
+    color: black;
+    font-weight: 500;
+  }
+
+  .about-link:hover {
+    color: var(--highlight-color);
   }
 }
