--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -23,6 +23,7 @@ nav {
   justify-content: center;
   align-items: center;
   transition: all 0.65s ease;
+  padding: 0;
 }
 
 footer {
@@ -57,6 +58,7 @@ footer p {
     align-items: center;
     margin-left: 20em;
     min-height: 120vh;
+    position: sticky;
   }
 
   nav {
@@ -64,7 +66,6 @@ footer p {
     width: 10%;
     height: 100%;
     justify-content: flex-start;
-    padding: 2rem 0;
   }
 
   footer {
