--- a/client/src/styles/nav.css
+++ b/client/src/styles/nav.css
@@ -1,15 +1,24 @@
 .navbar {
+  display: flex;
   flex-direction: row;
   gap: 1rem;
+  align-items: center;
   justify-content: space-between;
-  padding: 0 1rem;
+  padding: 2rem 1rem;
+  width: 90%;
+}
+
+.navbar-links {
+  display: flex;
+  flex-direction: row;
+  gap: 2em;
 }
 
 .logo {
   width: 6rem;
 }
 
-.navbar p {
+.navbar-links p {
   font-size: 1rem;
 }
 
@@ -26,6 +35,12 @@
     width: 100%;
     max-width: 1200px;
     padding: 0 1rem;
+  }
+
+  .navbar-links {
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
   }
 
   .logo {
